---
source: src/tests/mod.rs
expression: err
---
Error: semantics::non_class_constructor

  × constructor can be used only with class types
   ╭─[main.ppl:4:1]
 3 │ 
 4 │ Trait { x: 1 }
   · ──┬──
   ·   ╰── Can't construct this non-class type
   ╰────
